work on future work

--- a/main.bib
+++ b/main.bib
@@ -1724,3 +1724,6 @@ url={https://openreview.net/forum?id=HJGven05Y7},
 }
 
 @book{Xu_Nikolentzos_Vazirgiannis_Boström_2022, address={Cham}, series={Studies in Computational Intelligence}, title={Image Keypoint Matching Using Graph Neural Networks}, volume={1016}, ISBN={978-3-030-93412-5}, url={https://link.springer.com/10.1007/978-3-030-93413-2_37}, DOI={10.1007/978-3-030-93413-2_37}, booktitle={Complex Networks & Their Applications X}, publisher={Springer International Publishing}, author={Xu, Nancy and Nikolentzos, Giannis and Vazirgiannis, Michalis and Boström, Henrik}, editor={Benito, Rosa Maria and Cherifi, Chantal and Cherifi, Hocine and Moro, Esteban and Rocha, Luis M. and Sales-Pardo, Marta}, year={2022}, pages={441–451}, collection={Studies in Computational Intelligence}, language={en} }
+
+
+ @article{Mu_Gilmer_2019, title={MNIST-C: A Robustness Benchmark for Computer Vision}, url={http://arxiv.org/abs/1906.02337}, abstractNote={We introduce the MNIST-C dataset, a comprehensive suite of 15 corruptions applied to the MNIST test set, for benchmarking out-of-distribution robustness in computer vision. Through several experiments and visualizations we demonstrate that our corruptions significantly degrade performance of state-of-the-art computer vision models while preserving the semantic content of the test images. In contrast to the popular notion of adversarial robustness, our model-agnostic corruptions do not seek worst-case performance but are instead designed to be broad and diverse, capturing multiple failure modes of modern models. In fact, we find that several previously published adversarial defenses significantly degrade robustness as measured by MNIST-C. We hope that our benchmark serves as a useful tool for future work in designing systems that are able to learn robust feature representations that capture the underlying semantics of the input.}, note={arXiv:1906.02337 [cs]}, number={arXiv:1906.02337}, publisher={arXiv}, author={Mu, Norman and Gilmer, Justin}, year={2019}, month={Jun} }
