--- a/tex/horizontal_self_org.tex
+++ b/tex/horizontal_self_org.tex
@@ -627,13 +627,23 @@ The code-vector, also called the quantized vector $\boldsymbol{z}_q$ is fed into
 TODO: This has not been implemented yet (therefore, not explained in more detail).
 
 
-
-
-
-
-
-
 \section{Results}\seclbl{horizontal_self_org_results}
+As for vertical self-organisation (.c.f \secref{vertical_self_org_methods_dataset}), the MNIST data set is used to evaluate the models. 
+
+
+% Accuracy 1 VAE: 0.8537
+
+% Accuracy 4 VAE ohne Kommunikation:
+%accuracy: 0.8140
+%|	 accuracy vae 0: 0.5954
+%|	 accuracy vae 1: 0.6578
+%|	 accuracy vae 2: 0.6547
+%|	 accuracy vae 3: 0.6052
+
+
+
+
+
 
 
 
