--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,15 +1,55 @@
 %% future_work.tex
 
-Deep learning is far from being a system with human-like intelligence. Consequently, there is a massive amount of work to be done in the future to get closer to this ultimate goal. However, the implementations presented in this thesis are far from such a system. Consequently, a conclusion is drawn and next steps are proposed for the models presented in this thesis, but a long-term vision is presented as well. Specifically, future work is described for vertical self-organisation in \secref{future_vso} and for horizontal self-organisation in \secref{future_hso}. Afterwards, in \secref{future_3_stage}, a new model is presented on a very abstract level, which could work better intuitively, but a concrete implementation is unclear. In \secref{useful_representations} the usefulness of representations is discussed. In the last \secref{cognition_reasoning}, the author gives a personal opinion about the future of AI, which is not supported by scientific arguments but might be interesting for (motivated) readers.
+Deep learning is far from being a system with human-like intelligence. Consequently, there is a massive amount of work to be done in the future to get closer to this ultimate goal. However, the implementations presented in this thesis are far from such a system. Consequently, a conclusion is drawn and next steps are proposed for the models presented in this thesis, but a long-term vision is presented as well. Specifically, some insights are give to the neuroscientific concept that seem very promising in section \secref{future_neuro_concepts} and future work is described for vertical self-organisation in \secref{future_vso} as well as for horizontal self-organisation in \secref{future_hso}. Afterwards, in \secref{future_3_stage}, a new model is presented on a very abstract level, which could work better intuitively, but a concrete implementation is unclear. In \secref{useful_representations} the usefulness of representations is discussed. In the last \secref{cognition_reasoning}, the author gives a personal opinion about the future of AI, which is not supported by scientific arguments but might be interesting for (motivated) readers.
 
 
-\section{Vertical Self-Organisation}\seclbl{future_vso}
+
+\section{Neuroscientific Concepts}\seclbl{future_neuro_concepts}
+In \chref{neuro_concepts}, several concepts from neuroscience are identified that are believed to be fundamental to biological intelligence. However, since the discrepancy between the biological model and the artificial model is large, it is difficult to incorporate these biological concepts into a computer system. In this thesis, concrete suggestions are made how such concepts can be realised as a concrete implementation. By implementing these concepts in the form of horizontal and vertical self-organisation, it is demonstrated that these ideas can facilitate the learning process. The evaluation of the suitability of the proposed implementation was very iterative: many concepts were tested but discarded in the course of the work because they did not add a lot of value to existing systems. For example, a lot of time was spent on generating sparsity over several time-steps as it is done in the human brain. However, it was found that sparsification of representations over several time-steps has no advantage without additional system dynamics. This could be because the data is static and already contains all the information. Therefore, the result is the same if the sparsification is done in one time-step than if it is done over several time-steps.
+
+The most promising concepts identified in this work for improving deep learning systems are self-organisation, net-fragments, sparsity, lateral connections, continuous input, and embodiment. For each of these mechanisms, a concept for implementation is proposed. However, these proposals are the interpretation of the author and are only one of many possible solutions. So it could be that these concepts can also be interpreted differently and an alternative implementation could lead to better results.
 
 
-\section{Horizontal Self-Organisation}\seclbl{future_hso}
+\section{Implemented Models}\seclbl{future_so}
+The concepts from neuroscience are implemented in two specific ways, these are called vertical and horizontal self-organisation. It is important to note that the implementation of \emph{neuroscientific concepts} is the main focus of this thesis and not to push scores like accuracy on benchmarks. In general, a comparison with end-to-end backpropagation of error is not appropriate in this field: Backpropagation has been optimised for over 30 years by many institutes and even more researchers, and therefore alternative learning concepts cannot be expected to outperform backpropagation of error instantly. Thus, backpropagation of error is note considered an appropriate baseline.
 
-%TODO: VAE funktioniert aktuell nur bei zentrierten Objekten -> bei grossen Bilder muss Möglichkeit bestehen zu sagen ich bin Background oder ich bin Objekt xy und der andere VAE sagt ich bin Objekt ab
+Rather, the proposed implementations show that this type of implementation of neuroscientific concepts can facilitate learning. However, the implementation has not yet been optimised and incorporated in big networks that might perform on the level of existing systems. Rather, these implementations are to be understood as a basis for further work, which, for example, deals with the concepts presented in \secref{future_3_stage}, \secref{useful_representations} and \secref{cognition_reasoning}. Thus, this thesis is to be understood as a preliminary work of a larger research project to develop new concepts that improve AI in a long-term way.
 
+
+\subsection{Vertical Self-Organisation}\seclbl{future_vso}
+TODO: this section is not yet complete as many experiments are still ongoing...
+
+
+Currently, a sample is compared to the average activation of each class for classification. This average activation can be seen as a kind of object prototype within a world-model. Thus, it is compared to which prototype a sample fits best. The problem is that a single object prototype is most likely not sufficient. As an example, \figref{digit_4_versions} shows different versions of the digit $4$ that can be found in the MNIST data set. This demonstrates that a digit can be written in different ways\sidenote{this applies to all kind of data sets: Most objects can have various visual characteristics (size, color, shape) or look different from different viewpoints}. Consequently, the digits and thus the activations look different for samples from the same class and the use of more than one prototype per class seems helpful. Thus, instead of calculating the average activation per class, it could help to divide the activations per class into representative groups using a hierarchical clustering algorithm and to calculate the average activation (i.e. the cluster centre) per group. By doing so, multiple representative prototypes per class are obtained and the prediction could become lot more accurate.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.49\textwidth]{digit_4_versions}
+    \caption[Different versions of the digit $4$ in the MNIST data set]{Different versions of the digit $4$ in the MNIST data set.}
+    \figlbl{digit_4_versions}
+\end{figure}
+
+
+The generated representations have so far only been examined for classification. However, since the objective function does not explicitly optimise the model for classification, it would be interesting to investigate what other information is contained in the representations. Furthermore, the representations are currently generated by a supervised approach, since the labels are used in the loss function. The use of labels is generally not desirable because the manual creation of labels is time-consuming. An unsupervised (or self-supervised) approach, on the other hand, extracts features without using labels. Moreover, it is known that the brain also functions unsupervised to a very large extent and is thus biologically more plausible.
+Thus, it would be beneficial be the implementation of a loss function that does not rely on labels. Furthermore, the model should be tested on other data sets than MNIST to evaluate how well it can scale.
+
+The proposed approach for vertical self-organisation uses a novel kind of proxy objective function. Models based on proxy objective functions are biologically more plausible and a hot research topic (c.f. \secref{alt_train_algo}). Recently, many algorithms have been proposed, such as the forward-forward algorithm \sidecite{ff_algo}, which have caused a stir in the community by challenging the classical backpropagation of error as optimisation algorithm. However, despite the fact that they are biologically more plausible, these algorithms don't provide many benefits yet. Models trained with backpropagation of error are still superior, especially on well-known tasks such as classification. One of the author's hope was that such algorithms have other advantages such as better robustness. However, the evaluation of the models presented in this work and other models such as the forward-forward algorithm have crushed this initial believes.
+
+
+\subsection{Horizontal Self-Organisation}\seclbl{future_hso}
+TODO: this section is not yet complete as many experiments are still ongoing...
+
+
+TODO: Conclusion
+
+
+Similar to vertical self-organisation (c.f. \secref{future_vso}), the prediction accuracy could be improved by using more prototypes per class, as digits of the same class can look different. In the case of horizontal self-organisation, the $\boldsymbol{\mu}$ values per VAE should be clustered hierarchically to obtain groups of similar looking digits per class. Afterwards, the average value per group can be calculated to obtain more prototypes per class.
+
+A very important concept in the human brain is the prevention of early commitment\sidecite{Marr_2010} (c.f. \secref{future_3_stage}), i.e. that a single entity such as a network layer not commits to something and then persists. Typical CNN architectures for classification have this problem by design, as they combine low-level features to higher-level features. With low-level features, it is already determined which feature is within the image before they are combined to higher-level features. The proposed architecture for horizontal self-organisation reduces this problem by creating representations of image patches. The patches are that small that they contain only information to build low-level features. For example, the representations from a single VAE cannot be clearly assigned to a class and thus do not contain enough information to commit to an object. Therefore, the VAEs can be considered as low-level feature extractors such as the first layer of a neural network. To create higher-level features, communication with neighbouring VAEs (i.e. when looking at the big picture) is needed. Each VAE extracts low-level features (local view) and has to communicate with other VAEs (global view) to determine what they represent. Therefore, this architecture is less susceptible to the early commitment problem than typical end-to-end trained neural networks. Furthermore, the representations are learned unsupervised. For classification, the labels are fed into the network \emph{after} training in order to compute average class representations. Thus, no class representation but an image representation is learned during training. This further reduces the problem of individual VAEs committing to a class too early.
+
+In future work, this effect should even be intensified by further reducing the size of the patches and using more VAEs. It can be assumed that with $16$ VAEs ($4\times4$) the field of view is so restricted that each VAE can only produce very poor representations and these can only be assigned to a class in a random fashion. With more VAEs, interaction can also be restricted to local communication. With $2\times2$ VAEs, each VAE automatically receives information about the entire image when it communicates with its neighbours. With $4\times4$ VAEs, on the other hand, it is possible to have each VAE communicate only with its immediate neighbours. In this case, global image information must be propagated over several time-steps from one VAE to the next.
+
+Future work should also address a key problem of this architecture: Currently, this concept only works with images in which the objects always appear at approximately the same place in the image. This can be remedied if the VAEs are applied at different places in the image, similar to a kernel in a convolutional layer. In this case, however, the same VAE sees all image data, which means that it implicitly receives not only local but global image information. This could reduce the independence of each VAE. Consequently, it should be investigated how this architecture can become translation invariant in a similar way as CNNs.
 
 
 \section{3-Staged Model}\seclbl{future_3_stage}
@@ -30,9 +70,9 @@ Modern deep learning networks can't deal with this and often recognise patterns 
 
 Since these pixel groups keep each other active, neurons that represent insignificant features are continually switched off and thus implicitly higher-level features are formed. The lateral support, however, is limited to local patterns, i.e. it is not sufficient to recognise whole objects or scenes, but only parts of them. In S$1$, many higher-level features are precisely identified. In stage S$2$, however, these features are mapped to whole objects, for example faces (in terms of our example). These object representations in S$2$ are independent of transformation and position. The mapping of several low-level features to a concrete object is done by projection fibers. These implicitly remove transformations and position information from the features and assemble them into objects. Projection fibers can be interpreted as a kind of graph that combines features hierarchically, ignoring local distortions to create transformation independent object detection. Stage S$3$, on the other hand, stores very abstract prototypes of such objects, and by matching S$2$ and S$3$, the captured object can finally be identified as the face of a specific person.
 
-The model described contains very interesting concepts. Especially the prevention of early commitment and the use of dynamic fibres seem very promising. A concrete implementation that works for complex images like natural photos has not been implemented yet, despite a lot of effort in research. Maybe,  there is potential in using the recently popularised graph networks as projection fibres and thus learning the projections without relying on restricted mathematical models. For example, either VAE or VQ-VAE could be used as feature extractors, as in horizontal self-organisation. The advantage of these auto-encoder types is that they can extract local patterns and describe them as vectors in a ``meaningful'' latent space, i.e. similar vectors lie closer together in this latent space or, in the case of VQ-VAEs, are even discrete values. This facilitates the statistical learning and mapping of similar embedding vectors together. In contrast to horizontal self-organisation, auto-encoders could be applied at any image position to obtain continuous pixel representations from the same latent space. The auto-encoders can thus be used as feature extractors to extract good representations of small image patches. Afterwards, graph neural networks (GNNs) could be used to combine the embedding vectors into higher-level features. GNNs have already been used for image classification in recent years, mainly by identifying super-pixels and connecting them by graphs to recognise object structures \sidecite{Long_yan_chen_2021}.  One problem with GNNs is that they are often flat, i.e. many nodes lie on the same plane. This does not comply to the model of projection fibres, which must be hierarchical due to the large number of combinations. A remedy to this issue could be using differential pooling \sidecite{10.5555/3327345.3327389, Vasudevan_Bassenne_Islam_Xing_2023}.
+The model described contains very interesting concepts. Especially the prevention of early commitment and the use of dynamic fibres seem very promising. A concrete implementation that works for complex images like natural photos has not been implemented yet, despite a lot of effort in research. Maybe,  there is potential in using the recently popularised graph networks as projection fibres and thus learning the projections without relying on restricted mathematical models. For example, either VAE or VQ-VAE could be used as feature extractors, as in horizontal self-organisation. The advantage of these auto-encoder types is that they can extract local patterns and describe them as vectors in a ``meaningful'' latent space, i.e. similar vectors lie closer together in this latent space or, in the case of VQ-VAEs, are even discrete values. This facilitates the statistical learning and mapping of similar embedding vectors together. Horizontal self-organisation (c.f. \secref{future_hso}) is considered an important preliminary work to implement such a system. In contrast to horizontal self-organisation, auto-encoders could be applied at any image position to obtain continuous pixel representations from the same latent space. The auto-encoders can thus be used as feature extractors to extract good representations of small image patches. Afterwards, graph neural networks (GNNs) could be used to combine the embedding vectors into higher-level features. GNNs have already been used for image classification in recent years, mainly by identifying super-pixels and connecting them by graphs to recognise object structures \sidecite{Long_yan_chen_2021}.  One problem with GNNs is that they are often flat, i.e. many nodes lie on the same plane. This does not comply to the model of projection fibres, which must be hierarchical due to the large number of combinations. A remedy to this issue could be using differential pooling \sidecite{10.5555/3327345.3327389, Vasudevan_Bassenne_Islam_Xing_2023}.
 
-However, the goal is not to identify objects with graph structures. Rather, the graph should be able to match objects from images with abstract prototypes. In this way, the network should learn to ignore slight transformations and rotations. Therefore, I suggest using feeding embeddings instead of super-pixels in to GNNs to obtain graph representations of images, as embeddings can be tuned to the use case and contain more information than super-pixels. Next, and much more importantly, GNNs for object recognition can be combined with graph matching networks \sidecite{li2019graph, Xu_Nikolentzos_Vazirgiannis_Boström_2022} and thus might be used to match objects. This matching would then correspond to projection fibers from L$1$ to L$2$ and compare objects within an image with mental prototypes. However, many questions remain, such as how objects are identified in images (i.e. how to remove the background) or how the mental prototypes get into L$2$ in order that they can be matched.
+However, the goal is not to identify objects with graph structures. Rather, the graph should be able to match objects from images with abstract prototypes. In this way, the network should learn to ignore slight transformations and rotations. Therefore, I suggest using feeding embeddings instead of super-pixels in to GNNs to obtain graph representations of images, as embeddings can be tuned to the use case and contain more information than super-pixels. Next, and much more importantly, GNNs for object recognition can be combined with graph matching networks \sidecite{li2019graph, Xu_Nikolentzos_Vazirgiannis_Boström_2022} and thus might be used to match objects locally and globally despite slight transformations. This matching would then correspond to projection fibers from L$1$ to L$2$ and compare objects within an image with mental prototypes. However, many questions remain, such as how objects are identified in images (i.e. how to remove the background) or how the mental prototypes get into L$2$ in order that they can be matched. Furthermore, one must think about an iterative matching to avoid early commitment. 
 
 
 
