--- a/tex/vertical_self_org.tex
+++ b/tex/vertical_self_org.tex
@@ -264,7 +264,7 @@ In this thesis, BTT is not used, which means that a prediction is made after eac
 % Idee: Mehr Robustheit indem z.b. in einem timestep noise als Input genutzt wird oder bei 1 von 10 timesteps (ausser in den ersten 2) das Bild zufälligerweise vertauscht wird. -> Lateral connections should help
 
 
-\subsection{Hierarchical Features}
+\subsection{Hierarchical Features}\seclbl{vertical_self_org_hierarchical_features}
 A criticism of the proposed model is that it does not learn hierarchical features, even tough hierarchical features are one of the main reasons for the good performance of deep learning systems. The diversity loss (c.f. Equation \eqref{vso_9}) forces enforces in each layer that the latent representations of objects of the same class are similar and that the representations of different classes are different. This violates the concept of hierarchical feautres; the first layers should learn general features that are helpful for all classes, but cannot necessarily be assigned to a specific class. Only later layers build class representations that are specific to a class. In the current setting, however, already the first layers generate class specific representations.
 
 In the following, three possible measures are described to counteract this problem: (i) The fully connected layers are replaced by convolutional layers, so that the first layers have a smaller field of view and can only recognise local features. (ii) An adapted version of diversity loss forces a separation of features by class only in the last layers. (iii) While the very specific image information flows into the network from one side, general information in the form of class labels is fed into the network from the other side and these two types of information are fused. These three measures can be applied either individually or in combination with each other.
@@ -408,15 +408,33 @@ TODO: At the moment, various experiments are still ongoing to find out how this 
 
 
 \section{Results}\seclbl{vertical_self_org_methods_results}
+The results obtained by this model are presented below. It is important to note that the goal of these models is not to achieve the best possible results on a benchmark. In large-scale comparisons, it has already been found many times that end-to-end backpropagation of error is far superior to other methods, especially in the area of image classification \sidecite{Bartunov_Santoro_Richards_Marris_Hinton_Lillicrap_2018}. Rather, the aim here is to examine interesting concepts that are more biologically plausible and can serve as inspiration for future work.
+
+\subsection{Data set}\seclbl{vertical_self_org_methods_dataset}
+The model was trained and evaluated on the MNIST data set. It is a data set of handwritten digits with $60'000$ training samples and $10'000$ test samples.
+In this thesis the predefined training and test split is used.
+The samples are images of a digit with the resolution $28 \times 28$ pixel in grayscale, i.e. has one colour channel.
+
+In addition, the models are evaluated on MNIST-C \sidecite{Mu_Gilmer_2019}, a corrupted MNIST benchmark for testing out-of-distribution robustness of image classification models. This data set consists of the MNIST data with $15$ types of corruptions applied to the samples.
+
+\subsection{Baseline Model}
+The base model consists of $4$ fully connected layers with $512$, $256$, $128$ and $64$ neurons as shown in \figref{vertical_org_arch1}.
+No lateral connections or communication across multiple time-steps are used for the baseline. In addition, the measures described in \secref{vertical_self_org_hierarchical_features} are not used.
+This model achieves an accuracy on MNIST of $93.7\%$. This accuracy is remarkably good considering that the model has never been explicitly trained for classification with, for example, a cross-entropy loss.
+Furthermore, the model is trained extremely fast because these local updates are suitable for batch-gradient descent and not only mini-batch gradient descent.
+Each layer also has a different accuracy, typically in the range of $90.1\% - 92.9\%$. However, due to the implicit voting using the sum over the cosine similarities, the prediction of the entire model is better than that of a single layer.
+
+
+\subsection{Lateral Connections}
+TODO: How do lateral connections improve the result?
+
+
+\subsection{Hierarchical Features}
+TODO: How do hierarchical features improve the result?
 
 
 
 
-
-% Future Work: keine Labels aber z.B. clustering oder self-supervised durch augmentations
-% Future Work: Repräsentationen untersuchen -> was kann alles gefunden werden, e.g. information about object detection?
-% Future Work: Hierarchical clustering um mehrere Objektprototypen zu verwenden anstatt nur Durchschnittswert pro Klasse (i.e. mehrere repräsentative Object prototypen anstelle nur eines prototypen)
-% Selbst-Kritik: Weder Fisch noch Vogel -> zu wenig gut als geeignet für neues Klassifizierungsnetzwerk (obwohl das nie das Ziel war), zu wenig radikal neu als neurowissenschaftlich plausibel
 
 
 
