--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -1,35 +1,38 @@
 \small
 As soon as I have handed in this thesis and it has been assessed with a sufficient grade, I may use the title ``Master of Science''.
-Thus, I should know and have learned something about science.
-Science can be defined as the systematic analysis of the real or virtual world through observations and experiments as well as the further development of existing technology.
-While this definition sounds straightforward, it takes a lot of experience and commitment to work successfully in science.
-I have been lucky enough to be able to learn more about science and to apply my knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW) since the beginning of my studies.
-I also have the great privilege of being supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
+Thus, I should ``master science'' or at least be able to work scientifically.
+Science can be defined as the systematic analysis of the real or virtual world through observations and experiments and the further development of existing technology.
+While this definition sounds straightforward, working successfully in science requires a lot of experience and commitment.
+I have been lucky enough to learn more about science and apply my knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW) since the beginning of my master's studies.
+I am also privileged to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
 He uses to say (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
-It is always desirable to have an excellent outcome in a thesis such as a system that can execute a task and thereby achieves or even overcomes state-of-the-art performance.
-However, in my opinion, it is equally or even more important to reason why and how something works, to justify choices, and to show limitations.
-I wrote my Thesis with these thoughts in mind and hope that the readers can follow my reasoning.
+It is always desirable to have an excellent outcome in a thesis, such as a system that can execute a task and achieves or even overcomes state-of-the-art performance.
+However, it is equally or even more essential to reason why and how something works, to justify choices, and to show limitations.
+Moreover, scientific breakthroughs always require a little courage to try something completely new, even if this means that there may not be a desirable result in the end.
+I write my thesis with these thoughts and hope readers can follow my reasoning (in contrast to neuronal networks, which are the subject of this thesis, but whose reasoning often cannot be followed).
 
-This thesis spans two fields; computer science and neuroscience.
+This thesis comprises two fields; computer science and neuroscience.
 I try to link these fields as clearly as possible and to write in a way such that readers from both disciplines can follow my argumentation.
 However, this also means that some aspects are described rather extensively.
-So if you as a reader consider yourself a specialist in one of these fields, feel free to skip (parts of) chapters like the ``Fundamentals'' Chapter.
-In general, the chapter ``Fundamentals'' describes principles that are not necessary for understanding this thesis, but are helpful for people with a deep learning background to gain an overview of the field of neurocomputing and vice versa.
+So if you as a reader consider yourself a specialist in one of these fields, feel free to skip (parts of) like the ``Fundamentals'' in \chref{fundamentals
+}.
+In general, the chapter ``Fundamentals'' describes principles that are not necessary for understanding this thesis but are helpful for people with a deep learning background to gain an overview of the field of neurocomputing and vice versa.
 
-I would like to thank a couple of colleagues and friends for their support in this thesis.
-First I think of my mentor Prof. Dr. Thilo Stadelmann who got me excited about AI years ago and later introduced me to research.
-He always encouraged creative ideas, thinking outside of the box, and striving for greatness.
-Thank you for your support, help, and guidance, I have grown personally as well as professionally.
+I also want to thank colleagues and friends for supporting this thesis.
+First, I think of my mentor Prof. Dr. Thilo Stadelmann, who got me excited about AI years ago and later introduced me to research.
+He always encourages creative ideas, thinking outside the box, and striving for greatness.
+Thank you for your support, help, and guidance; I have grown personally and professionally.
 Further thanks go to Dr. Jan Deriu. 
 He has always helped to translate abstract ideas into concrete algorithms and to get them running.
 It's impressive how your understanding of deep learning can make complex problems look so simple.
 To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
-You have inspired me regularly with ideas and opened up a new way of thinking about deep learning (this was also the inspiration for Geoffrey Hinton's quote on the page before, although I wouldn't presume to say that this thesis will change the future).
-Even though we couldn't implement all of your ideas in this thesis, I learned a lot in our discussions and hope that I will be able to tackle more of your ideas in the future.
+You have inspired me regularly with ideas and opened up a new way of thinking about deep learning (this was also the inspiration for Geoffrey Hinton's quote on the second page, although I wouldn't presume to say that this thesis will change the future).
+Even though we couldn't implement all of your ideas in this thesis, I learned a lot in our discussions and hope that I will be able to tackle more of your thoughts in the future.
 
-The biggest thanks, however, goes to my family, who made this journey possible for me.
+The biggest thanks, however, goes to my family, who made this journey possible for me:
 To my parents, who supported and encouraged me in every way.
-To my younger brother who inspired me to study.
+To my younger brother, who inspired me to study.
 To my wife and son, who have been understanding and supportive and have always been the perfect counterbalance to the daily routine.
 Without the support of my family, I would never have been able to embark on this academic path.
 \normalsize
+
