work on introduction

--- a/main.bib
+++ b/main.bib
@@ -54,7 +54,7 @@
 }
 
 @online{Coursera,
-  author = {Coursera Inc.},
+  author = {{Coursera Inc.}},
   title = {Deep Learning Specialization},
   year = {2022},
   url = {https://www.coursera.org/specializations/deep-learning},
@@ -70,7 +70,7 @@
 }
 
 @online{venturebeat_img_analysis,
-  author = {Venture Beat},
+  author = {{Venture Beat}},
   title = {New deep learning model brings image segmentation to edge devices},
   year = {2023},
   url = {https://venturebeat.com/ai/new-deep-learning-model-brings-image-segmentation-to-edge-devices/},
@@ -87,7 +87,7 @@
 }
 
 @online{axios_hinton,
-  author = {Axios Media Inc.},
+  author = {{Axios Media Inc.}},
   title = {Artificial intelligence pioneer says we need to start over},
   year = 2017,
   url = {https://www.axios.com/2017/12/15/artificial-intelligence-pioneer-says-we-need-to-start-over-1513305524},
@@ -103,7 +103,7 @@
 }
 
 @online{OpenAI_compute,
-  author = {Open AI},
+  author = {{Open AI}},
   title = {AI and Compute},
   year = 2018,
   url = {https://openai.com/blog/ai-and-compute/},
@@ -298,7 +298,7 @@ author = {Saeed Reza Kheradpisheh and Mohammad Ganjtabesh and Simon J. Thorpe an
 keywords = {Spiking neural network, STDP, Deep learning, Object recognition, Temporal coding},
 }
 
-@article{von_der_Malsburg_Stadelmann_Grewe_2022, title={A Theory of Natural Intelligence}, url={http://arxiv.org/abs/2205.00002}, abstractNote={Introduction: In contrast to current AI technology, natural intelligence -- the kind of autonomous intelligence that is realized in the brains of animals and humans to attain in their natural environment goals defined by a repertoire of innate behavioral schemata -- is far superior in terms of learning speed, generalization capabilities, autonomy and creativity. How are these strengths, by what means are ideas and imagination produced in natural neural networks? Methods: Reviewing the literature, we put forward the argument that both our natural environment and the brain are of low complexity, that is, require for their generation very little information and are consequently both highly structured. We further argue that the structures of brain and natural environment are closely related. Results: We propose that the structural regularity of the brain takes the form of net fragments (self-organized network patterns) and that these serve as the powerful inductive bias that enables the brain to learn quickly, generalize from few examples and bridge the gap between abstractly defined general goals and concrete situations. Conclusions: Our results have important bearings on open problems in artificial neural network research.}, note={arXiv:2205.00002 [cs, q-bio]}, number={arXiv:2205.00002}, publisher={arXiv}, author={von der Malsburg, Christoph and Stadelmann, Thilo and Grewe, Benjamin F.}, year={2022}, month=Apr }
+@article{von_der_Malsburg_Stadelmann_Grewe_2022, title={A Theory of Natural Intelligence}, url={http://arxiv.org/abs/2205.00002}, abstractNote={Introduction: In contrast to current AI technology, natural intelligence -- the kind of autonomous intelligence that is realized in the brains of animals and humans to attain in their natural environment goals defined by a repertoire of innate behavioral schemata -- is far superior in terms of learning speed, generalization capabilities, autonomy and creativity. How are these strengths, by what means are ideas and imagination produced in natural neural networks? Methods: Reviewing the literature, we put forward the argument that both our natural environment and the brain are of low complexity, that is, require for their generation very little information and are consequently both highly structured. We further argue that the structures of brain and natural environment are closely related. Results: We propose that the structural regularity of the brain takes the form of net fragments (self-organized network patterns) and that these serve as the powerful inductive bias that enables the brain to learn quickly, generalize from few examples and bridge the gap between abstractly defined general goals and concrete situations. Conclusions: Our results have important bearings on open problems in artificial neural network research.}, note={arXiv:2205.00002 [cs, q-bio]}, number={arXiv:2205.00002}, publisher={arXiv}, author={{von der Malsburg}, Christoph and Stadelmann, Thilo and Grewe, Benjamin F.}, year={2022}, month=Apr }
 
 @mastersthesis{lehmann,
   author  = "Lehmann, Claude",
@@ -452,9 +452,9 @@ url={https://doi.org/10.1038/35057157}
 
  @article{Kolmogorov_1998, title={On tables of random numbers}, volume={207}, ISSN={03043975}, DOI={10.1016/S0304-3975(98)00075-9}, number={2}, journal={Theoretical Computer Science}, author={Kolmogorov, A.N.}, year={1998}, month=Nov, pages={387–395}, language={en} }
 
- @article{Willshaw_VonDerMalsburg_1976, title={How patterned neural connections can be set up by self-organization}, volume={194}, ISSN={0080-4649, 2053-9193}, DOI={10.1098/rspb.1976.0087}, abstractNote={An important problem in biology is to explain how patterned neural connections are set up during ontogenesis. Topographically ordered mappings, found widely in nervous systems, are those in which neighbouring elements in one sheet of cells project to neighbouring elements in a second sheet. Exploiting this neighbourhood property leads to a new theory for the establishment of topographical mappings, in which the distance between two cells is expressed in terms of their similarity with respect to certain physical properties assigned to them. This topographical code can be realized in a model employing either synchronization of nervous activity or exchange of specific molecules between neighbouring cells. By means of modifiable synapses the code is used to set up a topographical mapping between two sheets with the same internal structure. We have investigated the neural activity version. Without needing to make any elaborate assumptions about its structure or about the operations its elements are to carry out we have shown that the mappings are set up in a system-to-system rather than a cell-to-cell fashion. The pattern of connections develops in a step-by-step and orderly fashion, the orientation of the mappings being laid down in the earliest stages of development.}, number={1117}, journal={Proceedings of the Royal Society of London. Series B. Biological Sciences}, author={Willshaw, D. J. and Von Der Malsburg, Christoph}, year={1976}, month=Nov, pages={431–445}, language={en} }
+ @article{Willshaw_VonDerMalsburg_1976, title={How patterned neural connections can be set up by self-organization}, volume={194}, ISSN={0080-4649, 2053-9193}, DOI={10.1098/rspb.1976.0087}, abstractNote={An important problem in biology is to explain how patterned neural connections are set up during ontogenesis. Topographically ordered mappings, found widely in nervous systems, are those in which neighbouring elements in one sheet of cells project to neighbouring elements in a second sheet. Exploiting this neighbourhood property leads to a new theory for the establishment of topographical mappings, in which the distance between two cells is expressed in terms of their similarity with respect to certain physical properties assigned to them. This topographical code can be realized in a model employing either synchronization of nervous activity or exchange of specific molecules between neighbouring cells. By means of modifiable synapses the code is used to set up a topographical mapping between two sheets with the same internal structure. We have investigated the neural activity version. Without needing to make any elaborate assumptions about its structure or about the operations its elements are to carry out we have shown that the mappings are set up in a system-to-system rather than a cell-to-cell fashion. The pattern of connections develops in a step-by-step and orderly fashion, the orientation of the mappings being laid down in the earliest stages of development.}, number={1117}, journal={Proceedings of the Royal Society of London. Series B. Biological Sciences}, author={Willshaw, D. J. and {von der Malsburg}, Christoph}, year={1976}, month=Nov, pages={431–445}, language={en} }
 
- @article{Willshaw_VonDerMalsburg_1979, title={A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem}, volume={287}, ISSN={0080-4622, 2054-0280}, DOI={10.1098/rstb.1979.0056}, abstractNote={This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.}, number={1021}, journal={Philosophical Transactions of the Royal Society of London. B, Biological Sciences}, author={Willshaw, D. J. and Von Der Malsburg, Christoph}, year={1979}, month=Nov, pages={203–243}, language={en} }
+ @article{Willshaw_VonDerMalsburg_1979, title={A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem}, volume={287}, ISSN={0080-4622, 2054-0280}, DOI={10.1098/rstb.1979.0056}, abstractNote={This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.}, number={1021}, journal={Philosophical Transactions of the Royal Society of London. B, Biological Sciences}, author={Willshaw, D. J. and {von der Malsburg}, Christoph}, year={1979}, month=Nov, pages={203–243}, language={en} }
 
 @article{Malsburg_1987,
 	doi = {10.1209/0295-5075/3/11/015},
@@ -479,7 +479,7 @@ url={https://doi.org/10.1038/35057157}
   year={1990}
 }
 
- @article{Fernandes_vonderMalsburg_2015, title={Self-Organization of Control Circuits for Invariant Fiber Projections}, volume={27}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/NECO_a_00725}, abstractNote={Assuming that patterns in memory are represented as two-dimensional arrays of local features, just as they are in primary visual cortices, pattern recognition can take the form of elastic graph matching (Lades et al., 1993 ). Neural implementation of this may be based on preorganized fiber projections that can be activated rapidly with the help of control units (Wolfrum, Wolff, Lücke, & von der Malsburg, 2008 ). Each control unit governs a set of projection fibers that form part of a coherent mapping. We describe a mathematical model for the ontogenesis of the underlying connectivity based on a principle of network self-organization as described by the Häussler system (Häussler & von der Malsburg, 1983 ), modified to be sensitive to pattern similarity and to support formation of multiple mappings, each under the command of a control unit. The process takes the form of a soft-winner-take-all, where units compete for the representation of maps. We show simulations for invariant point-to-point and feature-to-feature mappings.}, number={5}, journal={Neural Computation}, author={Fernandes, Tomas and von der Malsburg, Christoph}, year={2015}, month=May, pages={1005–1032}, language={en} }
+ @article{Fernandes_vonderMalsburg_2015, title={Self-Organization of Control Circuits for Invariant Fiber Projections}, volume={27}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/NECO_a_00725}, abstractNote={Assuming that patterns in memory are represented as two-dimensional arrays of local features, just as they are in primary visual cortices, pattern recognition can take the form of elastic graph matching (Lades et al., 1993 ). Neural implementation of this may be based on preorganized fiber projections that can be activated rapidly with the help of control units (Wolfrum, Wolff, Lücke, & von der Malsburg, 2008 ). Each control unit governs a set of projection fibers that form part of a coherent mapping. We describe a mathematical model for the ontogenesis of the underlying connectivity based on a principle of network self-organization as described by the Häussler system (Häussler & von der Malsburg, 1983 ), modified to be sensitive to pattern similarity and to support formation of multiple mappings, each under the command of a control unit. The process takes the form of a soft-winner-take-all, where units compete for the representation of maps. We show simulations for invariant point-to-point and feature-to-feature mappings.}, number={5}, journal={Neural Computation}, author={Fernandes, Tomas and {von der Malsburg}, Christoph}, year={2015}, month=May, pages={1005–1032}, language={en} }
 
  @book{Arathorn_2002, address={Stanford, Calif}, title={Map-seeking circuits in visual cognition: a computational mechanism for biological and machine vision}, ISBN={978-0-8047-4277-1}, callNumber={QP383.15 .A736 2002}, publisher={Stanford University Press}, author={Arathorn, D. W.}, year={2002} }
 
@@ -1686,18 +1686,18 @@ url={https://openreview.net/forum?id=HJGven05Y7},
  year = {2021}
 }
 
-@article{Wolfrum_Wolff_Lücke_vonderMalsburg_2008, title={A recurrent dynamic model for correspondence-based face recognition}, volume={8}, ISSN={1534-7362}, DOI={10.1167/8.7.34}, number={7}, journal={Journal of Vision}, author={Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and von der Malsburg, Christoph}, year={2008}, month={Dec}, pages={34}, language={en} }
+@article{Wolfrum_Wolff_Lücke_vonderMalsburg_2008, title={A recurrent dynamic model for correspondence-based face recognition}, volume={8}, ISSN={1534-7362}, DOI={10.1167/8.7.34}, number={7}, journal={Journal of Vision}, author={Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and {von der Malsburg}, Christoph}, year={2008}, month={Dec}, pages={34}, language={en} }
 
-@article{Willshaw_VonDerMalsburg_1979, title={A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem}, volume={287}, ISSN={0080-4622, 2054-0280}, DOI={10.1098/rstb.1979.0056}, abstractNote={This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.}, number={1021}, journal={Philosophical Transactions of the Royal Society of London. B, Biological Sciences}, author={Willshaw, D. J. and Von Der Malsburg, Christoph}, year={1979}, month={Nov}, pages={203–243}, language={en} }
+@article{Willshaw_VonDerMalsburg_1979, title={A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem}, volume={287}, ISSN={0080-4622, 2054-0280}, DOI={10.1098/rstb.1979.0056}, abstractNote={This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.}, number={1021}, journal={Philosophical Transactions of the Royal Society of London. B, Biological Sciences}, author={Willshaw, D. J. and {von der Malsburg}, Christoph}, year={1979}, month={Nov}, pages={203–243}, language={en} }
 
 @book{wiskott1996face,
   title={Face recognition by dynamic link matching},
-  author={Wiskott, Laurenz and von der Malsburg, Christoph},
+  author={Wiskott, Laurenz and {von der Malsburg}, Christoph},
   year={1996},
   publisher={Ruhr-Univ., Inst. für Neuroinformatik}
 }
 
-@article{Fernandes_vonderMalsburg_2015, title={Self-Organization of Control Circuits for Invariant Fiber Projections}, volume={27}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/NECO_a_00725}, abstractNote={Assuming that patterns in memory are represented as two-dimensional arrays of local features, just as they are in primary visual cortices, pattern recognition can take the form of elastic graph matching (Lades et al., 1993 ). Neural implementation of this may be based on preorganized fiber projections that can be activated rapidly with the help of control units (Wolfrum, Wolff, Lücke, & von der Malsburg, 2008 ). Each control unit governs a set of projection fibers that form part of a coherent mapping. We describe a mathematical model for the ontogenesis of the underlying connectivity based on a principle of network self-organization as described by the Häussler system (Häussler & von der Malsburg, 1983 ), modified to be sensitive to pattern similarity and to support formation of multiple mappings, each under the command of a control unit. The process takes the form of a soft-winner-take-all, where units compete for the representation of maps. We show simulations for invariant point-to-point and feature-to-feature mappings.}, number={5}, journal={Neural Computation}, author={Fernandes, Tomas and von der Malsburg, Christoph}, year={2015}, month={May}, pages={1005–1032}, language={en} }
+@article{Fernandes_vonderMalsburg_2015, title={Self-Organization of Control Circuits for Invariant Fiber Projections}, volume={27}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/NECO_a_00725}, abstractNote={Assuming that patterns in memory are represented as two-dimensional arrays of local features, just as they are in primary visual cortices, pattern recognition can take the form of elastic graph matching (Lades et al., 1993 ). Neural implementation of this may be based on preorganized fiber projections that can be activated rapidly with the help of control units (Wolfrum, Wolff, Lücke, & von der Malsburg, 2008 ). Each control unit governs a set of projection fibers that form part of a coherent mapping. We describe a mathematical model for the ontogenesis of the underlying connectivity based on a principle of network self-organization as described by the Häussler system (Häussler & von der Malsburg, 1983 ), modified to be sensitive to pattern similarity and to support formation of multiple mappings, each under the command of a control unit. The process takes the form of a soft-winner-take-all, where units compete for the representation of maps. We show simulations for invariant point-to-point and feature-to-feature mappings.}, number={5}, journal={Neural Computation}, author={Fernandes, Tomas and {von der Malsburg}, Christoph}, year={2015}, month={May}, pages={1005–1032}, language={en} }
  
 @book{Marr_2010, title={Vision: A Computational Investigation into the Human Representation and Processing of Visual Information}, ISBN={978-0-262-28961-0}, url={https://direct.mit.edu/books/book/3299}, DOI={10.7551/mitpress/9780262514620.001.0001}, publisher={The MIT Press}, author={Marr, David}, year={2010}, language={en} }
 
